Add put and delete cluster handler skeletons.
