# restapi/operations/syncsets_api.go
@@ -47,6 +47,12 @@ func NewSyncsetsAPI(spec *loads.Document) *SyncsetsAPI {
 		ClustersGetClustersHandler: clusters.GetClustersHandlerFunc(func(params clusters.GetClustersParams) middleware.Responder {
 			return middleware.NotImplemented("operation clusters.GetClusters has not yet been implemented")
 		}),
+		ClustersCreateOrUpdateOneHandler: clusters.CreateOrUpdateOneHandlerFunc(func(params clusters.CreateOrUpdateOneParams) middleware.Responder {
+			return middleware.NotImplemented("operation clusters.CreateOrUpdateOne has not yet been implemented")
+		}),
+		ClustersDestroyOneHandler: clusters.DestroyOneHandlerFunc(func(params clusters.DestroyOneParams) middleware.Responder {
+			return middleware.NotImplemented("operation clusters.DestroyOne has not yet been implemented")
+		}),
 	}
 }
 
@@ -83,6 +89,10 @@ type SyncsetsAPI struct {
 
 	// ClustersGetClustersHandler sets the operation handler for the get clusters operation
 	ClustersGetClustersHandler clusters.GetClustersHandler
+	// ClustersCreateOrUpdateOneHandler sets the operation handler for the create or update one operation
+	ClustersCreateOrUpdateOneHandler clusters.CreateOrUpdateOneHandler
+	// ClustersDestroyOneHandler sets the operation handler for the destroy one operation
+	ClustersDestroyOneHandler clusters.DestroyOneHandler
 	// ServeError is called when an error is received, there is a default handler
 	// but you can set your own with this
 	ServeError func(http.ResponseWriter, *http.Request, error)
@@ -161,6 +171,12 @@ func (o *SyncsetsAPI) Validate() error {
 
 	if o.ClustersGetClustersHandler == nil {
 		unregistered = append(unregistered, "clusters.GetClustersHandler")
+	}
+	if o.ClustersCreateOrUpdateOneHandler == nil {
+		unregistered = append(unregistered, "clusters.CreateOrUpdateOneHandler")
+	}
+	if o.ClustersDestroyOneHandler == nil {
+		unregistered = append(unregistered, "clusters.DestroyOneHandler")
 	}
 
 	if len(unregistered) > 0 {
@@ -254,6 +270,14 @@ func (o *SyncsetsAPI) initHandlerCache() {
 		o.handlers["GET"] = make(map[string]http.Handler)
 	}
 	o.handlers["GET"]["/clusters"] = clusters.NewGetClusters(o.context, o.ClustersGetClustersHandler)
+	if o.handlers["PUT"] == nil {
+		o.handlers["PUT"] = make(map[string]http.Handler)
+	}
+	o.handlers["PUT"]["/clusters/{name}"] = clusters.NewCreateOrUpdateOne(o.context, o.ClustersCreateOrUpdateOneHandler)
+	if o.handlers["DELETE"] == nil {
+		o.handlers["DELETE"] = make(map[string]http.Handler)
+	}
+	o.handlers["DELETE"]["/clusters/{name}"] = clusters.NewDestroyOne(o.context, o.ClustersDestroyOneHandler)
 }
 
 // Serve creates a http handler to serve the API over HTTP
